# recipe-from-video

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml  test.url
src/recipe/: __main__.py  audio.py  cli.py  config.py  download.py  models.py  pipeline.py
src/recipe/llm/: __init__.py  deepseek.py
src/recipe/stt/: __init__.py  aws.py  cloudflare.py  google.py  volcano.py  whisper_local.py
