[project]
name = "recipe"
version = "0.1.0"
description = "Cooking video to structured recipe CLI tool"
readme = "README.md"
authors = [
    { name = "zaijun", email = "zaijun@amazon.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "httpx",
    "pydantic>=2",
    "rich",
]

[project.optional-dependencies]
aws = ["boto3"]
google = ["google-cloud-speech"]

[project.scripts]
recipe = "recipe.__main__:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
